# homeassistant-myskoda

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  __init__.py  authorization.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  crowdin.yml  device_tracker.py  entity.py  enyaq.py  hacs.json  manifest.json  myskoda.py  number.py  pyproject.toml  sensor.py  switch.py
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  feature_request.md  feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: crowdin-download.yml  crowdin-upload.yml  hassfest.yaml  lint-pr.yaml  lint.yaml  pr.yml  release.yml  stale.yml  validate.yaml
custom_components/myskoda/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  device_action.py  device_tracker.py  diagnostics.py  entity.py  error_handlers.py  icons.json  image.py  issues.py  lock.py  manifest.json  number.py  quality_scale.yaml  sensor.py  services.yaml  strings.json  switch.py  utils.py
custom_components/myskoda/translations/: .nl.json.swp  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hu.json  it.json  nl.json  no.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json
docs/: design.md  entities.md  mqtt.md
translations/: en.json
