[project]
name = "homeassistant-myskoda"
version = "0.0.0"
description = "HomeAssistant integration for MySkoda."
authors = [
    { name = "Frederick Gnodtke", email = "frederick@gnodtke.net" },
    { name = "WebSpider", email = "bacardicoke@gmail.com" },
    { name = "Fabrice Devaux", email = "fabrice.devaux@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = ["homeassistant>=2026.4.4", "myskoda>=2.11.0"]

[dependency-groups]
dev = ["homeassistant-stubs>=2026.4.4", "ruff ~=0.15.0", "pyright ~=1.1.400"]

[tool.uv]
override-dependencies = [
    "pyobjc-core==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-corebluetooth==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-libdispatch==12.1; sys_platform == 'darwin'",
]

[tool.pyright]
reportIncompatibleVariableOverride = "none"
venvPath = "."
venv = ".venv"
