[project]
name = "homeassistant-myskoda"
version = "0.0.0"
description = "HomeAssistant integration for MySkoda."
authors = [
    { name = "Frederick Gnodtke", email = "frederick@gnodtke.net" },
    { name = "WebSpider", email = "bacardicoke@gmail.com" },
    { name = "Fabrice Devaux", email = "fabrice.devaux@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13.2,<3.15"
dependencies = ["homeassistant>=2025.3.2", "myskoda>=2.13.1,<2.14"]

[dependency-groups]
dev = ["homeassistant-stubs>=2025.3.2", "ruff >=0.15.0,<0.16", "pyright >=1.1.400,<1.2"]

[tool.pyright]
reportIncompatibleVariableOverride = "none"
venvPath = "."
venv = ".venv"
